# projectlib-rust

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  fs.rs  lib.rs  migrations.rs  runs.rs  terminal.rs
apps/desktop/src-tauri/src/git/: auth.rs  mod.rs  models.rs  operations.rs  service.rs  streaming.rs  util.rs
apps/desktop/src-tauri/tests/: terminal_tests.rs
apps/desktop/src/components/: ProjectCard.svelte  RunButton.svelte  RunConfigModal.svelte  RunContextMenu.svelte  RunToast.svelte  TerminalTabs.svelte  TerminalView.svelte
apps/desktop/src/components/__tests__/: RunButton.spec.ts
apps/desktop/src/lib/: db.ts  file-ops.ts  git.ts  logging.ts  project-scan.ts  terminal.ts
apps/desktop/src/lib/editor/: CodeEditor.svelte  EditorTabs.svelte  FileTree.svelte  GitPanel.svelte  file-tree-service.ts  language.ts  monaco.ts
apps/desktop/src/lib/run/: errors.ts  service.ts  types.ts
apps/desktop/src/lib/terminal/: service.ts  types.ts
apps/desktop/src/lib/terminal-kit/: service.ts  theme.ts  types.ts
docs/: DB.md  EDITOR.md  GETTING_STARTED.md  LOGGING.md
