[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
description = "Projectlib Desktop App"

[lib]
name = "desktop_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-sql",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-pty",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-log",
]

[dependencies]
tauri = { version = "2.9.1", features = ["wry"], optional = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"], optional = true }
tauri-plugin-shell = { version = "2.3.1", optional = true }
tauri-plugin-pty = { version = "0.1.1", optional = true }
tauri-plugin-fs = { version = "2.4.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
tempfile = "3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tauri-plugin-log = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"] }
which = "6"
toml = "0.8"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
